--- a/algorithm_page_main_style.css
+++ b/algorithm_page_main_style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16;
 }
 
 .main_container {
@@ -30,9 +32,18 @@
 }
 
 .algorithm_select {
+    display: flex;
     background-color: aliceblue;
     height: 100%;
-    width: 25%;
+    width: 18%;
+    flex-direction: column;
+    justify-content:flex-start;
+}
+
+.algorithm_select h2 {
+    text-align: center;
+    width: 100%;
+    padding: 20px 0;
 }
 
 .algorithm_visual {
@@ -45,4 +56,15 @@
     background-color: darkgray;
     height: 30%;
     width: 100%;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    width: 98%;
+}
+
+.tab_header {
+    font-size: 1.5rem;
+    margin: 3px 0;
 }
